--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
     <div class="right">
       <div class="icons center">
-        <a href="#"><img src="images/icon-facebook.svg" alt=""></a>
-        <a href="#"><img src="images/icon-twitter.svg" alt=""></a>
-        <a href="#"><img src="images/icon-pinterest.svg" alt=""></a>
-        <a href="#"><img src="images/icon-instagram.svg" alt=""></a>
+        <a href="#"><img src="/images/images/icon-facebook.svg" alt=""></a>
+        <a href="#"><img src="/images/images/icon-twitter.svg" alt=""></a>
+        <a href="#"><img src="/images/images/icon-pinterest.svg" alt=""></a>
+        <a href="#"><img src="/images/images/icon-instagram.svg" alt=""></a>
       </div>
       <p>© 2021 Loopstudios. All rights reserved.</p>
     </div>
@@ -101,6 +101,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-  <script src="/loopstudio code/app/js/script.js"></script>
+  <script src="app/js/script.js"></script>
 </body>
 </html>
