--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=".images/favicon-32x32.png">
   <link rel="stylesheet" href="app/scss/style.css">
 
   <title>Frontend Mentor | Loopstudios landing page</title>
@@ -88,10 +88,10 @@
 
     <div class="right">
       <div class="icons center">
-        <a href="#"><img src="/images/images/icon-facebook.svg" alt=""></a>
-        <a href="#"><img src="/images/images/icon-twitter.svg" alt=""></a>
-        <a href="#"><img src="/images/images/icon-pinterest.svg" alt=""></a>
-        <a href="#"><img src="/images/images/icon-instagram.svg" alt=""></a>
+        <a href="#"><img src="images/icon-facebook.svg" alt=""></a>
+        <a href="#"><img src="images/icon-twitter.svg" alt=""></a>
+        <a href="#"><img src="images/icon-pinterest.svg" alt=""></a>
+        <a href="#"><img src="images/icon-instagram.svg" alt=""></a>
       </div>
       <p>© 2021 Loopstudios. All rights reserved.</p>
     </div>
@@ -101,6 +101,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-  <script src="/app/js/script.js"></script>
+  <script src="app/js/script.js"></script>
 </body>
 </html>
